--- a/card/valeo/index.html
+++ b/card/valeo/index.html
@@ -19,12 +19,12 @@
   <meta name="twitter:description" content="Compare Valeo: Non-custodial money app with crypto, cards, and payments. Coming soon.">
   <meta name="twitter:image" content="https://spendbase.cards/og-images/valeo.png">
   <meta name="twitter:site" content="@spendbase">
-  <script>window.location.replace('https://spendbase.cards/#card/valeo');</script>
-  <noscript><meta http-equiv="refresh" content="0;url=https://spendbase.cards/#card/valeo"></noscript>
+  <script>fetch('/index.html').then(function(r){return r.text()}).then(function(h){document.open();document.write(h);document.close()});</script>
+  <noscript><meta http-equiv="refresh" content="0;url=https://spendbase.cards/"></noscript>
 </head>
 <body>
   <h1>Valeo Card — Crypto Card Review</h1>
   <p>Valeo is a modern, non-custodial money app for crypto, cards, and payments. Card details TBA — coming soon.</p>
-  <p><a href="https://spendbase.cards/#card/valeo">View on Spendbase →</a></p>
+  <p><a href="https://spendbase.cards/card/valeo/">View on Spendbase →</a></p>
 </body>
 </html>
