--- a/card/volet/index.html
+++ b/card/volet/index.html
@@ -24,12 +24,12 @@
   <meta name="twitter:image" content="https://spendbase.cards/og-images/volet.png">
   <meta name="twitter:site" content="@spendbase">
 
-  <script>window.location.replace('https://spendbase.cards/#card/volet');</script>
-  <noscript><meta http-equiv="refresh" content="0;url=https://spendbase.cards/#card/volet"></noscript>
+  <script>fetch('/index.html').then(function(r){return r.text()}).then(function(h){document.open();document.write(h);document.close()});</script>
+  <noscript><meta http-equiv="refresh" content="0;url=https://spendbase.cards/"></noscript>
 </head>
 <body>
   <h1>Volet Card — Crypto Card Review</h1>
   <p>Volet is a crypto e-wallet and spending card platform since 2014. 7M+ users, 150+ countries, Visa & Mastercard options. Free P2P transfers and multi-currency wallets.</p>
-  <p><a href="https://spendbase.cards/#card/volet">View full review on Spendbase →</a></p>
+  <p><a href="https://spendbase.cards/card/volet/">View full review on Spendbase →</a></p>
 </body>
 </html>
