--- a/card/hana-wallet/index.html
+++ b/card/hana-wallet/index.html
@@ -25,10 +25,10 @@
   <meta name="twitter:site" content="@spendbase">
 
   <!-- Redirect real users to the SPA -->
-  <script>window.location.replace('https://spendbase.cards/#card/hana-wallet');</script>
-  <noscript><meta http-equiv="refresh" content="0;url=https://spendbase.cards/#card/hana-wallet"></noscript>
+  <script>fetch('/index.html').then(function(r){return r.text()}).then(function(h){document.open();document.write(h);document.close()});</script>
+  <noscript><meta http-equiv="refresh" content="0;url=https://spendbase.cards/"></noscript>
 </head>
 <body>
-  <p>Redirecting to <a href="https://spendbase.cards/#card/hana-wallet">Hana Wallet on Spendbase</a>...</p>
+  <p>Redirecting to <a href="https://spendbase.cards/card/hana-wallet/">Hana Wallet on Spendbase</a>...</p>
 </body>
 </html>
