SEO: update meta tags to 2026, add BonkX logo, add twitter:site, update structured data, sync Twitter meta in updateSEO

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Meta Tags -->
-  <title>Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards | Spendbase</title>
+  <title>Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards | Spendbase</title>
   <meta name="description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback. Self-custody & non-custodial options. No FX fees.">
-  <meta name="keywords" content="crypto card, crypto debit card, USDC card, bitcoin card, stablecoin card, cryptocurrency card, self-custody card, non-custodial card, crypto cashback, best crypto card 2025">
+  <meta name="keywords" content="crypto card, crypto debit card, USDC card, bitcoin card, stablecoin card, cryptocurrency card, self-custody card, non-custodial card, crypto cashback, best crypto card 2026">
   <meta name="author" content="Spendbase">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://spendbase.cards">
@@ -23,15 +23,16 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://spendbase.cards">
-  <meta property="og:title" content="Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards">
+  <meta property="og:title" content="Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards">
   <meta property="og:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
   <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/og-card-v2/public">
   <meta property="og:site_name" content="Spendbase">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@spaboravez">
   <meta name="twitter:url" content="https://spendbase.cards">
-  <meta name="twitter:title" content="Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards">
+  <meta name="twitter:title" content="Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards">
   <meta name="twitter:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
   <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/og-card-v2/public">
 
@@ -46,7 +47,10 @@
     "url": "https://spendbase.cards",
     "logo": "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public",
     "description": "The leading crypto card comparison platform. Compare 70+ cryptocurrency debit cards.",
-    "sameAs": []
+    "sameAs": [
+      "https://x.com/spaboravez",
+      "https://t.me/SpendbaseCards"
+    ]
   }
   </script>
 
@@ -121,7 +125,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Article",
-    "headline": "Best Crypto Cards 2025 - Compare 70+ USDC & Bitcoin Debit Cards",
+    "headline": "Best Crypto Cards 2026 - Compare 70+ USDC & Bitcoin Debit Cards",
     "description": "Compare the top cryptocurrency debit cards for spending Bitcoin, USDC, and other digital assets. Find self-custody options with up to 15% cashback.",
     "author": {
       "@type": "Organization",
@@ -136,7 +140,7 @@
       }
     },
     "datePublished": "2025-01-01",
-    "dateModified": "2025-01-27",
+    "dateModified": "2026-02-02",
     "mainEntityOfPage": {
       "@type": "WebPage",
       "@id": "https://spendbase.cards/"
@@ -315,7 +319,7 @@ const allCards = [
     { id: 175, name: 'Bit2Me', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/916eeb67-3870-4457-098f-ae0a89763700/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e4f675a5-f4b1-4172-ee40-d9026aef9500/public', xHandle: 'Bit2Me_Global', showFrontTags: true, bg: 'from-[#0046E1] to-[#0036b1]', network: 'Visa', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['europe'], cashback: 'Up to 9%', cashbackToken: 'B2M', fxFee: '0%', annualFee: 'TBD', features: ['Up to 9% cashback', 'Spanish exchange', 'B2M token rewards', 'Low ATM fees'], perks: ['Spain focused', 'High cashback', 'EU regulated'], token: { ticker: 'B2M', live: true, cmc: 'bit2me' }, website: 'https://bit2me.com', platforms: 'both' },
     { id: 177, name: 'Verse V-Card', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/12efc6f8-e958-4e13-d6dd-51be91457700/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/12efc6f8-e958-4e13-d6dd-51be91457700/public', xHandle: 'VerseEcosystem', showFrontTags: true, bg: 'from-[#0a1628] to-[#1a2d4a]', network: 'Mastercard', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'VERSE rewards', cashbackToken: 'VERSE', fxFee: '0%', annualFee: '€49.99', features: ['Self-custody wallet', 'VERSE token rewards', '37M+ merchants', 'Global ATM access'], perks: ['Bitcoin.com ecosystem', 'Non-custodial', 'VERSE burn rewards'], token: { ticker: 'VERSE', live: true, cmc: 'verse-bitcoin' }, website: 'https://verse.bitcoin.com/card/', platforms: 'both' },
   { id: 179, name: 'Kolo', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/eb87aa31-66b7-493f-3c12-c10563b52b00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/15f6a954-834a-4abb-42dd-b90876f66e00/public', xHandle: 'KoloHub', showFrontTags: true, bg: 'from-[#00D26A] to-[#00a854]', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Self-custody', 'Crypto spending', 'Multi-chain'], perks: ['Non-custodial', 'Web3 native'], website: 'https://kolo.com', platforms: 'both' },
-  { id: 1302, name: 'BonkX', showBrandName: true, brandNameText: 'BonkX', xHandle: 'BonkX_SOL', showFrontTags: true, bg: 'from-[#FF6B00] to-[#FF9500]', network: 'TBD', category: 'onchain', archetype: 'neobank', custody: 'TBD', chain: 'Solana', regions: ['global'], cashback: 'Stablecoin cashback', cashbackToken: 'BONK', fxFee: 'TBD', annualFee: 'TBD', features: ['Solana neobank', 'BONK powered', 'IBANs', 'Cards', 'Payroll', 'Stablecoin cashback'], perks: ['Massive BONK community', 'Early access perks', 'Premium card tiers'], token: { ticker: 'BONK', live: true, cmc: 'bonk' }, website: 'https://bonkx.io', comingSoon: true, waitlistUrl: 'https://bonkx.io', platforms: 'both' },
+  { id: 1302, name: 'BonkX', logo: 'https://bonkx.io/assets/images/logo.svg', brandLogo: 'https://bonkx.io/assets/images/logo.svg', showBrandName: true, brandNameText: 'BonkX', xHandle: 'BonkX_SOL', showFrontTags: true, bg: 'from-[#FF6B00] to-[#FF9500]', network: 'TBD', category: 'onchain', archetype: 'neobank', custody: 'TBD', chain: 'Solana', regions: ['global'], cashback: 'Stablecoin cashback', cashbackToken: 'BONK', fxFee: 'TBD', annualFee: 'TBD', features: ['Solana neobank', 'BONK powered', 'IBANs', 'Cards', 'Payroll', 'Stablecoin cashback'], perks: ['Massive BONK community', 'Early access perks', 'Premium card tiers'], token: { ticker: 'BONK', live: true, cmc: 'bonk' }, website: 'https://bonkx.io', comingSoon: true, waitlistUrl: 'https://bonkx.io', platforms: 'both' },
 
   // ============================================
   // CATEGORY 3: NEOBANKS WITH DIRECT CRYPTO SPENDING
@@ -1594,7 +1598,7 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
     <div className="max-w-6xl mx-auto px-4 sm:p-6">
       {/* SEO-optimized hero section */}
       <header className="mb-6 sm:mb-8">
-        <h1 className={`text-2xl sm:text-4xl font-bold mb-2 sm:mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2025</h1>
+        <h1 className={`text-2xl sm:text-4xl font-bold mb-2 sm:mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2026</h1>
         <p className={`text-sm sm:text-lg mb-3 sm:mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
           Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards.
         </p>
@@ -4699,7 +4703,7 @@ function getCardSlug(card) {
 function updateSEO(view, cardName) {
   const BASE = 'https://spendbase.cards';
   const titles = {
-    cards: 'Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards | Spendbase',
+    cards: 'Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards | Spendbase',
     learn: 'Learn About Crypto Cards | Guides & Education | Spendbase',
     rewards: 'Video Rewards | Earn While Learning About Crypto Cards | Spendbase',
     wizard: 'Find My Perfect Crypto Card | Card Finder Quiz | Spendbase',
@@ -4709,7 +4713,7 @@ function updateSEO(view, cardName) {
     demo: 'Video Demo | Spendbase',
   };
   const descriptions = {
-    cards: 'Compare the best crypto debit cards for 2025. Find USDC, Bitcoin, and stablecoin cards with cashback, low fees, and global acceptance.',
+    cards: 'Compare the best crypto debit cards for 2026. Find USDC, Bitcoin, and stablecoin cards with cashback, low fees, and global acceptance.',
     learn: 'Learn everything about crypto cards — guides, education, and tips for spending your digital assets in the real world.',
     rewards: 'Earn rewards by watching educational videos about crypto cards and decentralized finance.',
     wizard: 'Take our 60-second quiz to find the perfect crypto debit card for your spending style.',
@@ -4750,6 +4754,13 @@ function updateSEO(view, cardName) {
   const ogUpdates = { 'og:title': title, 'og:description': desc, 'og:url': canonical };
   Object.entries(ogUpdates).forEach(([prop, val]) => {
     let el = document.querySelector(`meta[property="${prop}"]`);
+    if (el) el.setAttribute('content', val);
+  });
+
+  // Twitter tags
+  const twitterUpdates = { 'twitter:title': title, 'twitter:description': desc, 'twitter:url': canonical };
+  Object.entries(twitterUpdates).forEach(([name, val]) => {
+    let el = document.querySelector(`meta[name="${name}"]`);
     if (el) el.setAttribute('content', val);
   });
 }
