Fix X handle: @spaboravez → @spendbasecards

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards">
   <meta name="twitter:title" content="Best Crypto Cards 2026 | Compare USDC & Bitcoin Debit Cards">
   <meta name="twitter:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
@@ -48,7 +48,7 @@
     "logo": "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public",
     "description": "The leading crypto card comparison platform. Compare 70+ cryptocurrency debit cards.",
     "sameAs": [
-      "https://x.com/spaboravez",
+      "https://x.com/spendbasecards",
       "https://t.me/SpendbaseCards"
     ]
   }
