--- a/card/binance-card/index.html
+++ b/card/binance-card/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/binance-card/">
   <meta property="og:title" content="Binance Card Crypto Card Review | Up to 8% Cashback">
   <meta property="og:description" content="Binance Card is a crypto-native crypto card offering Up to 8% cashback in BNB. Custodial solution on BNB Chain with 0.9% FX fees.">
-  <meta property="og:image" content="https://cdn.brandfetch.io/idXI-zkGu8/w/334/h/334/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1760641089923">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/binance-card/">
   <meta name="twitter:title" content="Binance Card Crypto Card Review | Up to 8% Cashback">
   <meta name="twitter:description" content="Binance Card is a crypto-native crypto card offering Up to 8% cashback in BNB. Custodial solution on BNB Chain with 0.9% FX fees.">
-  <meta name="twitter:image" content="https://cdn.brandfetch.io/idXI-zkGu8/w/334/h/334/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1760641089923">
+  <meta property="og:image" content="https://spendbase.cards/og/card/binance-card.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/binance-card.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -418,7 +421,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
