--- a/card/bit2me/index.html
+++ b/card/bit2me/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/bit2me/">
   <meta property="og:title" content="Bit2Me Crypto Card Review | Up to 9% Cashback">
   <meta property="og:description" content="Bit2Me is a exchange crypto card offering Up to 9% cashback in B2M. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/916eeb67-3870-4457-098f-ae0a89763700/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/bit2me/">
   <meta name="twitter:title" content="Bit2Me Crypto Card Review | Up to 9% Cashback">
   <meta name="twitter:description" content="Bit2Me is a exchange crypto card offering Up to 9% cashback in B2M. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/916eeb67-3870-4457-098f-ae0a89763700/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/bit2me.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/bit2me.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -441,7 +444,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
