--- a/card/bitget-premier/index.html
+++ b/card/bitget-premier/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/bitget-premier/">
   <meta property="og:title" content="Bitget Premier Crypto Card Review | Up to 8% Cashback">
   <meta property="og:description" content="Bitget Premier is a exchange crypto card offering Up to 8% cashback in BGB. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/bitget-premier/">
   <meta name="twitter:title" content="Bitget Premier Crypto Card Review | Up to 8% Cashback">
   <meta name="twitter:description" content="Bitget Premier is a exchange crypto card offering Up to 8% cashback in BGB. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/bitget-premier.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/bitget-premier.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -446,7 +449,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
