--- a/card/bitpanda/index.html
+++ b/card/bitpanda/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/bitpanda/">
   <meta property="og:title" content="Bitpanda Crypto Card Review | 2% Cashback">
   <meta property="og:description" content="Bitpanda is a exchange crypto card offering 2% cashback in BEST. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/142814a1-9f4a-470e-fc28-c3f923062400/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/bitpanda/">
   <meta name="twitter:title" content="Bitpanda Crypto Card Review | 2% Cashback">
   <meta name="twitter:description" content="Bitpanda is a exchange crypto card offering 2% cashback in BEST. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/142814a1-9f4a-470e-fc28-c3f923062400/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/bitpanda.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/bitpanda.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -444,7 +447,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
