--- a/card/brighty/index.html
+++ b/card/brighty/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/brighty/">
   <meta property="og:title" content="Brighty Crypto Card Review | TBD Cashback">
   <meta property="og:description" content="Brighty is a fintech crypto card offering TBD cashback in TBD. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/2dd6a726-d935-49c8-9c3e-94a83e6e8800/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/brighty/">
   <meta name="twitter:title" content="Brighty Crypto Card Review | TBD Cashback">
   <meta name="twitter:description" content="Brighty is a fintech crypto card offering TBD cashback in TBD. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/2dd6a726-d935-49c8-9c3e-94a83e6e8800/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/brighty.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/brighty.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -412,7 +415,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
