Fix X handle: @spaboravez → @spendbasecards

--- a/card/cryptocom/index.html
+++ b/card/cryptocom/index.html
@@ -22,7 +22,7 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/cryptocom/">
   <meta name="twitter:title" content="Crypto.com Crypto Card Review | 1-8% Cashback">
   <meta name="twitter:description" content="Crypto.com is a crypto-native crypto card offering 1-8% cashback in CRO. Custodial solution on Cronos with 0% FX fees.">
@@ -446,7 +446,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
