--- a/card/etherfi-cash/index.html
+++ b/card/etherfi-cash/index.html
@@ -22,7 +22,7 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/etherfi-cash/">
   <meta name="twitter:title" content="Ether.fi Cash Crypto Card Review | 4.08% Cashback">
   <meta name="twitter:description" content="Ether.fi Cash is a crypto-native crypto card offering 4.08% cashback in ETHFI. Self-custody solution on Scroll with 0% FX fees.">
@@ -418,7 +418,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
