--- a/card/fold/index.html
+++ b/card/fold/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/fold/">
   <meta property="og:title" content="Fold Crypto Card Review | Up to 15% Cashback">
   <meta property="og:description" content="Fold is a crypto-native crypto card offering Up to 15% cashback in BTC/Sats. Custodial solution on Bitcoin with 0% FX fees.">
-  <meta property="og:image" content="https://cdn.brandfetch.io/id8zpwD0TT/w/230/h/82/theme/light/logo.png?c=1bxid64Mup7aczewSAYMX&t=1699911047235">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/fold/">
   <meta name="twitter:title" content="Fold Crypto Card Review | Up to 15% Cashback">
   <meta name="twitter:description" content="Fold is a crypto-native crypto card offering Up to 15% cashback in BTC/Sats. Custodial solution on Bitcoin with 0% FX fees.">
-  <meta name="twitter:image" content="https://cdn.brandfetch.io/id8zpwD0TT/w/230/h/82/theme/light/logo.png?c=1bxid64Mup7aczewSAYMX&t=1699911047235">
+  <meta property="og:image" content="https://spendbase.cards/og/card/fold.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/fold.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -426,7 +429,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
