--- a/card/swypefun/index.html
+++ b/card/swypefun/index.html
@@ -22,7 +22,7 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/swypefun/">
   <meta name="twitter:title" content="Swype.fun Crypto Card Review | None Cashback">
   <meta name="twitter:description" content="Swype.fun is a onchain crypto card offering None cashback in None. Self-custody solution on Base with 0% FX fees.">
@@ -403,7 +403,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
